# tree-sitter-caddy

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  grammar.js  mise.toml  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: release.yaml
bindings/go/: binding.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_caddy/: binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: base.txt  common_patterns.txt  environment_variables.txt  global_options.txt  real_world_konnect.txt  real_world_mine.txt  snippets.txt
